Fixed crash in filtering for BETWEEN and IN conditions; updated z-index for query builder to be displayed above datagrid preloader

--- a/npm/src/less/cmf.app.less
+++ b/npm/src/less/cmf.app.less
@@ -1752,7 +1752,7 @@ aside.main-sidebar {
     position: relative;
     height: 0 !important;
     overflow: visible;
-    z-index: 15;
+    z-index: 51;
 
     #query-builder {
         position: absolute;
